旅行可视化

--- a/homework_3_unfinished/Assignment-03-unfinished.ipynb
+++ b/homework_3_unfinished/Assignment-03-unfinished.ipynb
@@ -33,6 +33,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 动态规划前的原始做法"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -111,13 +118,6 @@
    "metadata": {},
    "source": [
     "##### 动态规划，考虑改变r(n)函数"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "方法一：利用装饰器和缓存变量"
    ]
   },
   {
@@ -901,16 +901,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
+   "execution_count": 57,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x163616c3be0>"
+       "<matplotlib.collections.PathCollection at 0x1636172aeb8>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -938,9 +940,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "shuro"
-   ]
+   "source": []
   }
  ],
  "metadata": {
